// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoodsItem  Component must be created 1`] = `
<Card
  as="div"
  body={false}
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <CardImg
      as="img"
      src="header.jpg"
      variant="top"
    />
    <div
      className="card-img-overlay d-flex flex-column justify-content-end"
      style={
        Object {
          "background": "linear-gradient(to top, var(--dark) 5%, transparent 60%)",
          "color": "var(--white)",
        }
      }
    >
      <CardTitle>
        Honda Civic
      </CardTitle>
      <CardText>
        undefined $
      </CardText>
    </div>
  </div>
  <CardBody
    className="d-flex flex-column"
  >
    <CardText
      style={Object {}}
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit.         Blanditiis provident quo quaerat repellat fuga debitis nemo voluptates         quis voluptate, dolorem modi non? Nisi, maxime a.
    </CardText>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Add to backet
    </Button>
  </CardBody>
</Card>
`;

exports[`GoodsItem  Component must be rendered after creation 1`] = `
<Card
  as="div"
  body={false}
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <CardImg
      as="img"
      src="header.jpg"
      variant="top"
    />
    <div
      className="card-img-overlay d-flex flex-column justify-content-end"
      style={
        Object {
          "background": "linear-gradient(to top, var(--dark) 5%, transparent 60%)",
          "color": "var(--white)",
        }
      }
    >
      <CardTitle />
      <CardText>
        undefined $
      </CardText>
    </div>
  </div>
  <CardBody
    className="d-flex flex-column"
  >
    <CardText
      style={Object {}}
    />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Add to backet
    </Button>
  </CardBody>
</Card>
`;
